[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bim"
version = "1.0.0"
description = "A custom programming language"
authors = [{name = "Jashith Raghavendra", email = "jashith.r1@gmail.com"}]
requires-python = ">=3.6"
dependencies = [
]

[project.scripts]
bim = "bim.main:main"